# shield

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  Cargo.toml  README.md  compose.yaml  deny.toml  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/: labels.yml
.github/workflows/: ci.yml  labels.yml  publish.yml  release.yml  website.yml
book/: book.toml
book/src/: SUMMARY.md  getting-started.md  introduction.md
examples/axum/: Cargo.toml  README.md
examples/axum/src/: main.rs
examples/dioxus-axum/: .env.example  Cargo.toml  Dioxus.toml  README.md
examples/dioxus-axum/src/: api.rs  app.rs  home.rs  main.rs
examples/leptos-actix/: Cargo.toml  README.md
examples/leptos-actix/src/: app.rs  home.rs  lib.rs  main.rs
examples/leptos-axum/: Cargo.toml  README.md
examples/leptos-axum/src/: app.rs  home.rs  lib.rs  main.rs
examples/react-router/: components.json  package.json  tsconfig.json  vite.config.ts
examples/react-router/app/: root.tsx  routes.ts
examples/react-router/app/routes/: home.tsx
examples/react-router/app/routes/auth/: action.tsx
examples/react-router/assets/css/: index.css
examples/sea-orm/: Cargo.toml
examples/sea-orm/src/: lib.rs  main.rs
examples/seaorm/: Cargo.toml
examples/seaorm/src/: lib.rs  main.rs
examples/workos/: .env.example  Cargo.toml  Dioxus.toml  README.md
examples/workos/src/: home.rs  main.rs
keycloak/: Shield-realm.json
