[workspace]
members = ["examples/*", "packages/*/*"]
resolver = "2"

[workspace.package]
authors = ["Rust For Web <info@rustforweb.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RustForWeb/shield"
version = "0.0.4"

[workspace.dependencies]
actix-files = "0.6.6"
actix-session = "0.10.1"
actix-utils = "3.0.1"
actix-web = "4.9.0"
async-std = "1.13.0"
async-trait = "0.1.83"
axum = "0.8.0"
bon = "3.3.2"
chrono = "0.4.39"
console_error_panic_hook = "0.1.2"
futures = "0.3.31"
http = "1.2.0"
leptos = "0.7.4"
leptos_actix = "0.7.4"
leptos_axum = "0.7.4"
leptos_meta = "0.7.4"
leptos_router = "0.7.4"
thiserror = "2.0.7"
sea-orm = "1.1.2"
sea-orm-migration = "1.1.2"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = "1.42.0"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tower-sessions = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
uuid = "1.11.0"
wasm-bindgen = "0.2.100"
wasm-tracing = "1.0.1"
