[workspace]
members = [
    "examples/axum",
    "examples/dioxus-axum",
    "examples/leptos-actix",
    "examples/leptos-axum",
    "examples/sea-orm",
    "examples/workos",
    "packages/core/*",
    "packages/integrations/shield-actix",
    "packages/integrations/shield-axum",
    "packages/integrations/shield-dioxus",
    "packages/integrations/shield-dioxus-axum",
    "packages/integrations/shield-leptos",
    "packages/integrations/shield-leptos-actix",
    "packages/integrations/shield-leptos-axum",
    "packages/integrations/shield-tower",
    "packages/methods/*",
    "packages/storage/*",
    "packages/styles/shield-bootstrap",
]
resolver = "2"

[workspace.package]
authors = ["Rust for Web <info@rustforweb.org>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustForWeb/shield"
version = "0.1.0"

[workspace.dependencies]
actix-files = "0.6.6"
actix-session = "0.11.0"
actix-utils = "3.0.1"
actix-web = "4.9.0"
anyhow = "1.0.100"
async-std = "1.13.0"
async-trait = "0.1.83"
axum = "0.8.1"
bon = "3.3.2"
chrono = "0.4.39"
console_error_panic_hook = "0.1.2"
dioxus = "0.7.0-rc.3"
dioxus-html = "0.7.0-rc.3"
dioxus-server = "0.7.0-rc.3"
futures = "0.3.31"
http = "1.2.0"
leptos = "0.8.3"
leptos_actix = "0.8.3"
leptos_axum = "0.8.3"
leptos_meta = "0.8.3"
leptos_router = "0.8.3"
sea-orm = "1.1.2"
sea-orm-migration = "1.1.2"
secrecy = "0.10.3"
serde = "1.0.215"
serde_json = "1.0.133"
shield = { path = "./packages/core/shield", version = "0.1.0" }
shield-actix = { path = "./packages/integrations/shield-actix", version = "0.1.0" }
shield-axum = { path = "./packages/integrations/shield-axum", version = "0.1.0" }
shield-bootstrap = { path = "./packages/styles/shield-bootstrap", version = "0.1.0" }
shield-credentials = { path = "./packages/methods/shield-credentials", version = "0.1.0" }
shield-diesel = { path = "./packages/storage/shield-diesel", version = "0.1.0" }
shield-dioxus = { path = "./packages/integrations/shield-dioxus", version = "0.1.0" }
shield-dioxus-axum = { path = "./packages/integrations/shield-dioxus-axum", version = "0.1.0" }
shield-email = { path = "./packages/methods/shield-email", version = "0.1.0" }
shield-leptos = { path = "./packages/integrations/shield-leptos", version = "0.1.0" }
shield-leptos-actix = { path = "./packages/integrations/shield-leptos-actix", version = "0.1.0" }
shield-leptos-axum = { path = "./packages/integrations/shield-leptos-axum", version = "0.1.0" }
shield-memory = { path = "./packages/storage/shield-memory", version = "0.1.0" }
shield-oauth = { path = "./packages/methods/shield-oauth", version = "0.1.0" }
shield-oidc = { path = "./packages/methods/shield-oidc", version = "0.1.0" }
shield-sea-orm = { path = "./packages/storage/shield-sea-orm", version = "0.1.0" }
shield-sqlx = { path = "./packages/storage/shield-sqlx", version = "0.1.0" }
shield-tower = { path = "./packages/integrations/shield-tower", version = "0.1.0" }
shield-webauthn = { path = "./packages/methods/shield-webauthn", version = "0.1.0" }
shield-workos = { path = "./packages/methods/shield-workos", version = "0.1.0" }
thiserror = "2.0.7"
tokio = "1.42.0"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
utoipa-axum = "0.2.0"
uuid = "1.11.0"
wasm-bindgen = "0.2.100"
wasm-tracing = "2.0.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
