[package]
name = "shield-examples-axum"
description = "Example with Axum."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true }
shield.workspace = true
shield-axum = { workspace = true, features = ["utoipa"] }
shield-memory = { workspace = true, features = ["method-oidc"] }
shield-oidc = { workspace = true, features = ["native-tls"] }
time = "0.3.37"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-sessions = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }
