[package]
name = "shield-examples-leptos-actix"
description = "Example with Leptos and Actix."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.leptos]
bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:actix-files",
    "dep:actix-session",
    "dep:actix-web",
    "dep:leptos_actix",
    "dep:shield-leptos-actix",
    "dep:shield-memory",
    "dep:shield-oidc",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "shield-memory/method-oidc",
]

[dependencies]
actix-files = { workspace = true, optional = true }
actix-session = { workspace = true, features = [
    "cookie-session",
], optional = true }
actix-web = { workspace = true, optional = true }
console_error_panic_hook.workspace = true
leptos.workspace = true
leptos_actix = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
shield.workspace = true
shield-leptos.workspace = true
shield-leptos-actix = { workspace = true, optional = true }
shield-memory = { workspace = true, optional = true }
shield-oidc = { workspace = true, features = ["native-tls"], optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
wasm-bindgen.workspace = true
wasm-tracing.workspace = true
