[package]
name = "shield-examples-leptos-axum"
description = "Example with Leptos and Axum."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { workspace = true, optional = true }
console_error_panic_hook.workspace = true
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
shield = { path = "../../packages/core/shield" }
shield-leptos = { path = "../../packages/integrations/shield-leptos" }
shield-leptos-axum = { path = "../../packages/integrations/shield-leptos-axum", optional = true }
shield-memory = { path = "../../packages/storage/shield-memory", optional = true }
shield-oidc = { path = "../../packages/providers/shield-oidc", optional = true }
time = "0.3.37"
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
tower-sessions = { workspace = true, optional = true }
wasm-bindgen.workspace = true

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:shield-leptos-axum",
    "dep:shield-memory",
    "dep:shield-oidc",
    "dep:tokio",
    "dep:tower-sessions",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "shield-memory/provider-oidc",
]

[package.metadata.leptos]
bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false
