[package]
name = "shield-examples-leptos-axum"
description = "Example with Leptos and Axum."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.leptos]
bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false

site-addr = "127.0.0.1:8080"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:shield-leptos-axum",
    "dep:shield-memory",
    "dep:shield-oidc",
    "dep:tokio",
    "dep:tower-sessions",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "shield-memory/method-oidc",
]

[dependencies]
axum = { workspace = true, optional = true }
console_error_panic_hook.workspace = true
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
shield.workspace = true
shield-bootstrap = { workspace = true, features = ["leptos"] }
shield-leptos.workspace = true
shield-leptos-axum = { workspace = true, optional = true }
shield-memory = { workspace = true, optional = true }
shield-oidc = { workspace = true, features = ["native-tls"], optional = true }
time = "0.3.47"
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
], optional = true }
tower-sessions = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
wasm-bindgen.workspace = true
wasm-tracing.workspace = true
