[package]
name = "shield-examples-workos"
description = "Example with WorkOS."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
# TODO: Enabling these triggers multiple RustSec advisories.
# desktop = ["dioxus/desktop"]
# mobile = ["dioxus/mobile"]
server = [
    "dep:axum",
    "dep:shield-dioxus-axum",
    "dep:shield-memory",
    "dep:shield-workos",
    "dep:tokio",
    "dep:tower-sessions",
    "dioxus/server",
    "shield-dioxus/server",
]
web = ["dioxus/web"]

[dependencies]
axum = { workspace = true, optional = true }
dioxus = { workspace = true, features = ["fullstack", "router"] }
shield.workspace = true
shield-bootstrap = { workspace = true, features = ["dioxus"] }
shield-dioxus.workspace = true
shield-dioxus-axum = { workspace = true, optional = true }
shield-memory = { workspace = true, optional = true }
shield-workos = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
tower-sessions = { workspace = true, optional = true }
tracing.workspace = true
